[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphs_tradke"
version = "0.0.1"
authors = [
  { name="Tyler Radke", email="tylerrradke@gmail.com" },
]
description = "Package to utilize Dijkstras Shortest Path"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"